mise a jour Complété

--- a/lab-02.Rmd
+++ b/lab-02.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Lab 02 - Plastic waste"
-author: "Votre nom"
-date: "La date"
+author: "Laurie Boisclair"
+date: "21 septembre 2025"
 output: github_document
 ---
 
@@ -90,5 +90,12 @@ Il semble y avoir une plus forte relation entre les variables du graphique 2.
 Recréez la visualisation:
 
 ```{r recreate-viz}
-
+plastic_waste_coastal <- plastic_waste %>%
+  mutate(coastal_pop_prop = coastal_pop / total_pop) %>%
+  filter(plastic_waste_per_cap < 3)
+ggplot(plastic_waste_coastal, aes(x = coastal_pop_prop, y = plastic_waste_per_cap, color = continent)) +
+  geom_point() +
+  geom_smooth(aes(group = 1), method = "loess", color = "black", se = TRUE) +
+  labs(title = "Quantité de déchets plastiques vs Proportion de la population côtière", subtitle = "Selon le continent", x = "Proportion de la population côtière (coastal/total population)", y = "Nombre de déchets plastiques par habitant", color = "Continent") 
+  
 ```
